加载体外配置文件中的环境变量

--- a/ley-mybatis-plus-oracle/src/main/resources/application.yml
+++ b/ley-mybatis-plus-oracle/src/main/resources/application.yml
@@ -15,3 +15,6 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+config:
+  path: D:/Personal/Code/Java_A/ley-springboot-basic/testConfig.yaml
